kyverno-utils/res-mut.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: zkyverno-resource-mutating-webhook-cfg
  ownerReferences:
  - apiVersion: rbac.authorization.k8s.io/v1
    kind: ClusterRole
    name: zkyvero-kyverno:webhook
    uid: b1b9d6d8-4637-4e4b-b45a-22a609127967
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSXlNRGt4TURFd016Y3dNMW9YRFRJek1Ea3hNREV4TXpjd00xb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTTl6TlRKcVQvc1EreitmQWpWZGxacG45ZzZiYnNnZDAxWmVud3NXckYrL1A2Sjk0NW1PTVlVTDM2MG0KVkJpNEN6eFlUS2dLVXVlS3YrTndPbUs2WDZwQUt1K0hIY2JxR3VOTVlDSklsTG44U01kVnlJODdjV0E0TEFvSQpzOGpLVXZFYUhqdG [...]
    service:
      name: zkyvero-kyverno-svc
      namespace: kyverno
      path: /mutate
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mutate.kyverno.svc-ignore
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
      - kyverno
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kyverno
  objectSelector: {}
  reinvocationPolicy: IfNeeded
  sideEffects: NoneOnDryRun
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM3VENDQWRXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFZTVJZd0ZBWURWUVFEREEwcUxtdDUKZG1WeWJtOHVjM1pqTUI0WERUSXlNRGt4TURFd016Y3dNMW9YRFRJek1Ea3hNREV4TXpjd00xb3dHREVXTUJRRwpBMVVFQXd3TktpNXJlWFpsY201dkxuTjJZekNDQVNJd0RRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DCmdnRUJBTTl6TlRKcVQvc1EreitmQWpWZGxacG45ZzZiYnNnZDAxWmVud3NXckYrL1A2Sjk0NW1PTVlVTDM2MG0KVkJpNEN6eFlUS2dLVXVlS3YrTndPbUs2WDZwQUt1K0hIY2JxR3VOTVlDSklsTG44U01kVnlJODdjV0E0TEFvSQpzOGpLVXZFYUhqdG [...]
    service:
      name: zkyvero-kyverno-svc
      namespace: kyverno
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mutate.kyverno.svc-fail
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
      - kyverno
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kyverno
  objectSelector: {}
  reinvocationPolicy: IfNeeded
  rules:
  - apiGroups:
    - ""
    - apps
    - batch
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    - DELETE
    resources:
    - pods
    - daemonsets
    - deployments
    - jobs
    - statefulsets
    - cronjobs
    - pods/ephemeralcontainers
    scope: '*'
  sideEffects: NoneOnDryRun
  timeoutSeconds: 30
