kyverno-utils/verifyimages.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-pod-images
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-pod-images
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - verifyDigest: false
        mutateDigest: false
        required: true
        imageReferences:
        - "*gcr.io/*"
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEhyQCx0E9wQWSFI9ULGwy3BuRklnt
[...]
                -----END PUBLIC KEY-----
    - name: verify-linkerd2-images
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - verifyDigest: false
        mutateDigest: false
        required: true
        imageReferences:
        - "*galsolom/*"
        attestors:
        - count: 1
          entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEb6rCCNUOPUVEP05sDctcvFr3SELG
[...]
                -----END PUBLIC KEY-----
